Test/Nat/NeqZero.expected
goal: ∀ (x : Nat), x ≠ 0

query:
(assert (not (forall ((x Int)) (=> (>= x 0) (distinct x 0)))))
(check-sat)

result: sat
Test/Nat/NeqZero.lean:4:2: error: unable to prove goal, either it is false or you need to define more symbols with `smt [foo, bar]`
goal: ∀ (x : Nat), x + 1 ≠ 0

query:
(assert (not (forall ((x Int)) (=> (>= x 0) (distinct (+ x 1) 0)))))
(check-sat)

result: unsat
Test/Nat/NeqZero.lean:7:8: warning: declaration uses 'sorry'
